# nfcfyi

./: README.md  demo.tape  pyproject.toml  server.json  smithery.yaml
src/nfcfyi/: __init__.py  __main__.py  api.py  cli.py  mcp_server.py
tests/: test_api.py
